Prevent body overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@
 
 body {
   font-family: 'Fibon Neue Rounded', sans-serif;
+  overflow-x: hidden;
 }
 
 .oh-no {
